--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,7 +1,12 @@
 .nav-item{
     font-size:larger;
+    text-decoration:none;
     font-weight: 700;
     color: rgb(4, 4, 81);
+}
+
+.nav-link{
+    text-decoration: none;
 }
 
 .navbar-brand{
