--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -5,12 +5,39 @@
     color: rgb(4, 4, 81);
 }
 
-.nav-link{
-    text-decoration: none;
-}
 
 .navbar-brand{
     font-size: xx-large;
     font-weight: 500;
     color:rgb(27, 6, 113);
+}
+
+.profile_btn{
+  background-color:white;
+  border: 2px solid #07054a;
+  color:#07054a;
+  padding: 8px 15px;
+  text-align: center;
+  text-decoration:double;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 25px;
+}
+
+.dropitem{
+    background-color:white;
+  color:#07054a;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration:double;
+  display:inline-block;
+  font-size: 15px;
+  margin: 4px 2px;
+}
+
+.dropitem:hover{
+    background-color:#07054a;
+    color: white;
+    text-decoration: none;
 }
