--- a/client/src/user/Dashboard.css
+++ b/client/src/user/Dashboard.css
@@ -1,3 +1,40 @@
 .card{
     text-align: center;
 }
+
+.card:hover{
+    box-shadow: 0 15px 25px 25px rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.dashboard{
+    background-image: url("/src/user/images/blur_bg.jpg");
+    height: 590px;
+    background-size: cover;
+    background-position: center;
+}
+
+.dash_head{
+    text-align: center;
+    font-style: italic;
+    font-weight: bolder;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.btn1{
+    background-color:white;
+  border: 2px solid #5b3232;
+  color:#5b3232;
+  padding: 12px 25px;
+  text-align: center;
+  text-decoration:double;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 25px;
+}
+
+.btn1:hover{
+    background-color:#774141;
+    color:white;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
