--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -30,3 +30,13 @@
   .privacy{
     text-align: center;
   }
+
+  .footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+  }
+
+  .footeritem{
+    font-size: larger;
+  }
