--- a/client/src/components/About.css
+++ b/client/src/components/About.css
@@ -1,7 +1,95 @@
 .abouthead {
     text-align: center;
+    font-weight: bolder;
+    font-style: italic;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .aboutsechead{
     text-align: center;
+    font-weight: bold;
+    font-style: italic;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.about{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin: 0;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+.column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+}
+
+.cardabout {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 50px;
+    background-color: lightblue;
+}
+
+.about-section {
+    padding: 50px;
+    text-align: center;
+    background-color: lightblue;
+    color: black;
+}
+
+.container {
+    padding: 0 16px;
+}
+
+.container::after,
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.title {
+    color: grey;
+}
+
+.button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+}
+
+.button:hover {
+    background-color: #555;
+}
+
+@media screen and (max-width: 650px) {
+    .column {
+        width: 100%;
+        display: block;
+    }
+}
+
+.text {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: lightblue;
+}
+
+h2 {
+    margin-left: 10px;
 }
