--- a/client/src/user/Dashboard.css
+++ b/client/src/user/Dashboard.css
@@ -7,7 +7,7 @@
 }
 
 .dashboard{
-    background-image: url("/src/user/images/blur_bg.jpg");
+    background-color: green;
     height: 590px;
     background-size: cover;
     background-position: center;
@@ -15,7 +15,8 @@
 
 .dash_head{
     text-align: center;
-    font-style: italic;
+    font-style: bold;
+    color: white;
     font-weight: bolder;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
