--- a/client/src/components/Blog.css
+++ b/client/src/components/Blog.css
@@ -3,4 +3,13 @@
     font-weight: bolder;
     font-style: italic;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size:50px;
+}
+.blogtitle{
+    font-weight: bolder;
+    font-style: italic;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.symptom{
+    text-align: left;
 }
