--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,23 +1,69 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: sans-serif,
     monospace;
 }
+
 
 .center{
   display: flex;
   justify-content: center;
 }
 
+.text-sans{
+  font-family: sans-serif;
+}
 
-.background-green{
-  background-color: green;
+.background-violet{
+  background-color: #110643;
+}
+
+.violet{
+  background: #110643;
+}
+.text-violet{
+  color: darkblue;
+}
+
+
+
+.rows{
+	display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+ }
+    
+    
+
+.cols-1 {width: 8.33%};
+.cols-2 {width: 16.66%;}
+.cols-3 {width: 25%;}
+.cols-4 {width: 33.33%;}
+.cols-5 {width: 41.66%;}
+.cols-6 {width: 50%;}
+.cols-7 {width: 58.33%;}
+.cols-8 {width: 66.66%;}
+.cols-9 {width: 75%;}
+.cols-10 {width: 83.33%;}
+.cols-11 {width: 91.66%;}
+.cols-12 {width: 100%;}
+
+@media only screen and (max-width: 500px) {
+
+  .col-5,.col-1,.col-2,.col-3,.col-4,.col-6,.col-7,.col-8,.col-9,.col-10,.col-11,.col-12{
+    width: 100%;
+  }
+  .col-7{
+    width: 100%;
+  }
+  .cols-4{
+    width: 100%;
+  }
+  
 }
