--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -7,7 +7,7 @@
 }
 
 .dashboard{
-    background-color: green;
+    background-color: #110643;
     height: 590px;
     background-size: cover;
     background-position: center;
@@ -18,7 +18,8 @@
     font-style: bold;
     color: white;
     font-weight: bolder;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: sans-serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
 }
 
 .btn1{
@@ -34,8 +35,7 @@
   border-radius: 25px;
 }
 
-.btn1:hover{
-    background-color:#774141;
-    color:white;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+.row{
+    margin-right: 0px;
 }
