--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -7,6 +7,7 @@
   .footeritem{
     font-size: larger;
     font-style: italic;
+    color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
 
