--- a/client/src/styles/Testimonial.css
+++ b/client/src/styles/Testimonial.css
@@ -6,7 +6,7 @@
 
 .testhead{
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: sans-serif;
 }
 
 .testcontainer {
