--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -19,7 +19,7 @@
     color: white;
     font-weight: bolder;
     font-family: sans-serif;
-    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .btn1{
