--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -11,7 +11,7 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
   }
 
-  .footerhead{
+  .tophead{
     text-align: center;
     font-weight: bolder;
     font-style: italic;
