--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -3,6 +3,8 @@
     font-weight: bolder;
     font-style: italic;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size:50px;
+    color: black;
 }
 
 .aboutsechead{
