--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -2,7 +2,10 @@
 	display: flex;
     width: 100%;
     flex-wrap: wrap;
+    --bs-gutter-x:0;
  }
+
+
 
  .row::after {
   display: block;
@@ -28,7 +31,9 @@
 .col-11 {width: 91.66%;}
 .col-121 {width: 100%;}
 
-
+ .row-card{
+   margin-top: 100px;
+ }
 
 
   @media only screen and (max-width: 500px) {
@@ -38,6 +43,18 @@
     }
     .col-7{
       width: 100%;
+    }
+    .row-card{
+      margin-top: 0px;
+    }
+    
+  }
+
+  @media only screen and (max-width: 690px) {
+
+   
+    .row-card{
+      margin-top: 0px;
     }
     
   }
