--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -8,7 +8,7 @@
 
 .dashboard{
     background-color: #110643;
-    height: 590px;
+    /* height: 590px; */
     background-size: cover;
     background-position: center;
 }
@@ -19,6 +19,7 @@
     color: white;
     font-weight: bolder;
     font-family: sans-serif;
+    font-style: italic;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
