--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,10 +1,11 @@
 .loginform{
-    background-image: url("../components/images/background.jpg");
-    height:700px;
-    width:auto;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  height: 700px;
+  width: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
   
   }
   
@@ -12,10 +13,8 @@
     height: 520px;
     width: 400px;
     background-color: rgba(255, 255, 255, 0.13);
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
+   
+    
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255, 255, 255, 0.1);
