--- a/client/src/styles/PdfForm.css
+++ b/client/src/styles/PdfForm.css
@@ -1,27 +1,30 @@
 .pdfform{
-  background-image: url("../components/images/background.jpg");
-  height:1250px;
-  width:auto;
+ 
+  height: auto;
+  width: auto;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
+  display: flex;
+  justify-content: center;
+  padding: 10px;
 }
 
 .pdf-form{
+ 
+
   height: 1050px;
   width: 800px;
   background-color: rgba(255, 255, 255, 0.13);
-  position: absolute;
-  transform: translate(-50%,-50%);
-  top: 50%;
-  left: 50%;
   border-radius: 10px;
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-padding: 50px 35px;
-margin-top: 320px;
+  padding: 50px 35px;
+  padding: 10px;
+
+
 }
 
 .pdf-form *{
