--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -7,8 +7,6 @@
 }
 
 .dashboard{
-    
-    /* height: 590px; */
     background-size: cover;
     background-position: center;
 }
@@ -16,11 +14,12 @@
 .dash_head{
     text-align: center;
     font-style: bold;
-    color: white;
     font-weight: bolder;
     font-family: sans-serif;
     font-style: italic;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    /* text-shadow: 2px 2px 8px #a2a2a2; */
+    font-size: 45px;
 }
 
 .btn1{
